tests/neg-custom-args/captures/unsound-reach.check
-- Error: tests/neg-custom-args/captures/unsound-reach.scala:18:13 -----------------------------------------------------
18 |        boom.use(f): (f1: File^{backdoor*}) => // error
   |        ^^^^^^^^
   |        Reach capability backdoor* and universal capability cap cannot both
   |        appear in the type (x: File^)(op: box File^{backdoor*} => Unit): Unit of this expression
-- [E164] Declaration Error: tests/neg-custom-args/captures/unsound-reach.scala:10:8 -----------------------------------
10 |    def use(x: File^)(op: File^ => Unit): Unit = op(x) // error, was OK using sealed checking
   |        ^
   |        error overriding method use in trait Foo of type (x: File^)(op: box File^ => Unit): Unit;
   |          method use of type (x: File^)(op: File^ => Unit): Unit has incompatible type
   |
   | longer explanation available when compiling with `-explain`
